Added getValue function

--- a/code-editor.html
+++ b/code-editor.html
@@ -321,6 +321,9 @@
                       this.mirror.setOption("theme", this.theme);
                   }
               }
+          },
+          getValue: function(){
+              return this.mirror.getValue();
           }
       });
 
