--- a/code-editor.html
+++ b/code-editor.html
@@ -324,6 +324,9 @@
           },
           getValue: function(){
               return this.mirror.getValue();
+          },
+          setValue: function(code){
+              this.mirror.setValue(code);
           }
       });
 
